# Functional_1

./: CHANGELOG.md  Functional1.cabal  README.md  lab_1_2_.hs
.github/workflows/: haskell.yml
app/: lab_1_2.hs  lab_1_29.hs
